--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,6 @@ a,
 .dtm-button.clr-red:hover {background: #097ec7;}
 .kc-features {display: block; margin: -1em 0 2em 2.7em; text-decoration: none;}
 .kc-features i {font-style: normal; text-decoration: underline;}
+
+.tag {color: navy;}
+.atn {color: purple;}
