--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,5 @@ a,
 .str {color: green;}
 .com {color: gray;}
 
-.odd {
-  background-color: #e6e6e6;
-  background-color: rgba(230,230,230,.5);
-}
+.odd {background-color: #e6e6e6;background-color: rgba(230,230,230,.5);}
+.demo .dtm-section h4 {padding-top: 1.1em;}
