--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,6 @@ a,
 .demo .dtm-section h4 {padding-top: 1.1em;}
 video, .video {margin:1em 0;outline:0;width:100%;}
 iframe.video {margin:0 0 1em;min-height:20em;}
+
+.dtm-dtv-dwn {line-height: 35px;}
+.dtm-dtv-dwn .dtm-button {line-height: 20px;}
