--- a/styles-v2.css
+++ b/styles-v2.css
@@ -32,7 +32,7 @@ body {
 body {
   font-family: arial, sans-serif;
   font-size: 100%;
-  line-height: 1.3;
+  line-height: 1.4;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -186,6 +186,7 @@ h2:after {
 }
 
 .extra p {
+  clear: both;
   padding: 3em 0;
   text-align: center;
 }
@@ -198,7 +199,8 @@ h2:after {
 
 /*.kmt-page-header,*/
 .kmt-homepage .kmt-page-content .kmt-section:first-child,
-.extra p {
+.extra p,
+.kmt-parameter table {
   background-color: rgba(200,200,200,.2);
 }
 
@@ -240,7 +242,7 @@ button,
 }
 
 .kmt-page-header li,
-.kmt-homepage .kmt-page-content li {
+.kmt-page-content li {
   display: inline-block;
 }
 
@@ -352,6 +354,53 @@ li i {
   background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 64 64"><path fill="rgb(248,136,0)" d="M47.9,12.4c0-1.9-1.5-3.4-3.4-3.4H18.6c-1.9,0-3.4,1.5-3.4,3.4v10.2h32.8V12.4z"/><path fill="rgb(248,136,0)" d="M46.2,32.8c-1,0-1.7-0.7-1.7-1.7c0-1,0.7-1.7,1.7-1.7c1,0,1.7,0.7,1.7,1.7C47.9,32.2,47.2,32.8,46.2,32.8zM51.3,24.3H11.7c-2.9,0-5.2,2.2-5.2,5.1v15.3c0,2.9,2.2,5.1,5.2,5.1h1.7V36.3h36.2v13.6h1.7c2.9,0,5.2-2.2,5.2-5.1V29.5C56.5,26.5,54.3,24.3,51.3,24.3z"/><path fill="rgb(248,136,0)" d="M18.6,48.2h25.9v1.7H18.6V48.2z M18.6,43.1h25.9v1.7H18.6V43.1z M15.1,51.6c0,1.9,1.6,3.4,3.4,3.4h25.9c1.9,0,3.4-1.5,3.4-3.4V38H15.1V51.6z"/></svg>');
 }
 
+.kmt-parameter {
+  margin: 0 0 3em;
+}
+
+.kmt-parameter:last-child {
+  margin: 0;
+}
+
+.kmt-parameter em {
+  display: block;
+  font-weight: bold;
+}
+
+.kmt-parameter table {
+  border-collapse: collapse;
+  margin-bottom: 1em;
+  width: 100%;
+}
+
+.kmt-parameter ul {
+  padding: .5em;
+}
+
+.kmt-parameter li {
+  display: block;
+  list-style-type: disc;
+  padding: 0;;
+}
+
+.kmt-parameter tr th {
+  color: black;
+  text-align: left;
+  width: 25%;
+}
+
+.kmt-demo .kmt-parameter tr th {
+  width: 40%;
+}
+
+.kmt-parameter th,
+.kmt-parameter td {
+  border-bottom: 1px solid white;
+  border-right: 1px solid white;
+  padding: .5em;
+  vertical-align: middle;
+}
+
 pre {
   overflow-x: auto;
 }
@@ -407,10 +456,6 @@ samp {
   color: #000;
   font-size: 110%;
   line-height: 1.6;
-}
-
-h4 + div {
-  padding: 0 0 2em 1em;
 }
 
 h4 + div:last-child,
@@ -555,6 +600,7 @@ code:last-child {
 /* / Hamburger menu */
 
 @media screen and (max-width: 860px) {
+
   .kmt-navigation {
     display: none;
   }
@@ -593,7 +639,7 @@ code:last-child {
   }
 
   body .kmt-section {
-    padding: 1.5em 10%;
+    padding: 1.5em 5%;
   }
 
   body .kmt-page-footer > * {
@@ -618,6 +664,10 @@ code:last-child {
     width: 100%;
   }
 
+  body .kmt-parameter li {
+    text-align: left;
+  }
+
   .kmt-homepage .kmt-section.gray-out img {
     max-height: 2.5em;
     width: auto;
@@ -633,6 +683,12 @@ code:last-child {
 
   body h2 + p {
     margin-bottom: 1.8em;
+  }
+
+  body .kmt-parameter th,
+  body .kmt-parameter td {
+    display:block;
+    width: 100%;
   }
 
 }
