--- a/styles-v2.css
+++ b/styles-v2.css
@@ -49,10 +49,8 @@ b {
 
 .kmt-page-header,
 .kmt-page-hero,
-.kmt-section,
 h2 {
   position: relative;
-  /*z-index: 10;*/
 }
 
 h1 {
@@ -319,6 +317,7 @@ button,
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: -1;
 }
 
 .kmt-page-hero p {
