--- a/styles-v2.css
+++ b/styles-v2.css
@@ -772,5 +772,14 @@ code:last-child {
     width: 100%;
   }
 
+  .fb-share-button.fb_iframe_widget.fb_iframe_widget_fluid {
+    display: inline-block;
+  }
+
+  .fb-share-button.fb_iframe_widget.fb_iframe_widget_fluid > span {
+    height: 12px;
+    width: 49px;
+  }
+
 }
 
