--- a/styles-v2.css
+++ b/styles-v2.css
@@ -64,6 +64,7 @@ h2 {
 }
 
 h3 {
+  color: #000;
   font-size: 3em;
   margin-bottom: .7em;
 }
@@ -118,11 +119,7 @@ h3 + p {
 /* Colors and decor */
 body {
   background-color: #fff;
-  color: #555;
-}
-
-h3 {
-  color: #000;
+  color: #333;
 }
 
 .kmt-page-header,
@@ -146,7 +143,7 @@ h3 {
 
 h3:after {
   background-color: #097ad2;
-  bottom: 0;
+  bottom: -.2em;
   content: '';
   height: 4px;
   left: 50%;
