--- a/styles-v2.css
+++ b/styles-v2.css
@@ -259,6 +259,7 @@ h3:after {
   color: #fff;
   display: inline-block;
   font-style: normal;
+  font-weight: normal;
   vertical-align: middle;
 }
 
