--- a/styles-v2.css
+++ b/styles-v2.css
@@ -290,8 +290,8 @@ h3:after {
 }
 
 .kmt-page-hero:after {
-  background: url(images/komito-hero-background.jpg) no-repeat center center fixed;
-  background-size: 100% 100%;
+  background: url(images/komito-hero-background.jpg) repeat center center fixed;
+  background-size: cover;
   content: '';
   height: 100%;
   left: 0;
