Updated home page header.

--- a/styles-v2.css
+++ b/styles-v2.css
@@ -291,6 +291,7 @@ h3:after {
 
 .kmt-page-hero:after {
   background: url(images/komito-hero-background.jpg) repeat center center fixed;
+  background-origin: border-box;
   background-size: cover;
   content: '';
   height: 100%;
