--- a/styles-v2.css
+++ b/styles-v2.css
@@ -59,41 +59,29 @@ h1 {
 }
 
 h2 {
-  color: #000;
-  font-size: 2em;
-}
-
-.kmt-homepage h2 {
   color: #fff;
   font-size: 1.75em;
 }
 
 h3 {
   color: #000;
-  font-size: 2.5em;
-  line-height: 1.6em;
-  margin-bottom: .5em;
-}
-
-.kmt-homepage h3 {
-  color: #000;
   font-size: 3em;
   margin-bottom: .7em;
 }
 
 h4 {
-  color: #000;
+  color: #333;
   font-weight: bold;
   padding-bottom: .4em;
   text-transform: uppercase;
 }
 
-/*.thin-font {
+.thin-font {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   transform: scale(1, 1.15);
-}*/
+}
 
 .kmt-page-content a[target='_blank'] {
   border-bottom: 1px dotted;
@@ -108,7 +96,7 @@ h4 {
 }
 
 .kmt-section {
-  padding: 2em 15%;
+  padding: 2em 10%;
 }
 
 .kmt-page-hero .kmt-section {
@@ -117,20 +105,13 @@ h4 {
 
 .kmt-homepage .kmt-section,
 h2,
-h3,
-h3 + p,
-.extra {
+h3 + p {
   text-align: center;
 }
 
 h3 + p {
   font-size: 1.2em;
-  margin-bottom: 2em;
-}
-
-iframe {
-  height: 435px;
-  width: 580px;
+  margin-bottom: 2.8em;
 }
 /* / Global settings */
 
@@ -160,8 +141,7 @@ body {
 }
 
 h3:after {
-  /*background-color: #07d;*/
-  background-color: #f80;
+  background-color: #07d;
   bottom: -.2em;
   content: '';
   height: 4px;
@@ -172,9 +152,9 @@ h3:after {
   z-index: 100;
 }
 
-/*.kmt-homepage h3:after {
+.kmt-homepage h3:after {
   background-color: #f80;
-}*/
+}
 
 .kmt-demo h2:after {
   display: none;
@@ -217,18 +197,8 @@ h3:after {
 /*.kmt-page-header,*/
 .kmt-homepage .kmt-page-content .kmt-section:first-child,
 .extra,
-.kmt-parameter th,
-.kmt-parameter td {
+.kmt-parameter table {
   background-color: rgba(200,200,200,.2);
-}
-
-.kmt-parameter th,
-.kmt-parameter td {
-  border: 1px solid rgba(200,200,200,.3);
-}
-
-.kmt-parameter td[colspan] {
-  background-color: rgba(200,200,200,0);
 }
 
 .kmt-homepage .kmt-page-header {
@@ -351,14 +321,8 @@ li i {
   width: 33%;
 }
 
-#parameters {
-  clear: both;
-  display: table;
-  width: 100%;
-}
-
 .kmt-parameter {
-  margin: 0 0 2em;
+  margin: 0 0 3em;
 }
 
 .kmt-parameter:last-child {
@@ -372,26 +336,16 @@ li i {
 
 .kmt-parameter table {
   border-collapse: collapse;
+  margin-bottom: 1em;
   width: 100%;
+}
+
+.kmt-parameter ul {
+  padding: 0 .5em;
 }
 
 .kmt-parameter li {
   padding: 0;
-}
-
-#parameters > ul {
-  float: left;
-  width: 19%;
-}
-
-.parameters-list {
-  float: right;
-  width: 80%;
-}
-
-#parameters > ul li {
-  display: block;
-  padding: .2em 0;
 }
 
 .kmt-parameter tr th {
@@ -402,7 +356,8 @@ li i {
 
 .kmt-parameter th,
 .kmt-parameter td {
-  /*border-bottom: 1px solid white;*/
+  border-bottom: 1px solid white;
+  border-right: 1px solid white;
   padding: 1em;
   vertical-align: middle;
 }
@@ -483,7 +438,7 @@ p > code {
 
 samp {
   color: #000;
-  font-size: 120%;
+  font-size: 110%;
   line-height: 1.6;
 }
 
@@ -687,21 +642,14 @@ code:last-child {
 
   h3 {
     font-size: 2em;
-    line-height: 1.2em;
   }
 
   .kmt-logo {
     font-size: 1.4em;
   }
 
-  #parameters > ul,
   h3:after {
     display: none;
-  }
-
-  iframe {
-    height: 315px;
-    width: 420px;
   }
 
   body .kmt-section {
@@ -740,11 +688,6 @@ code:last-child {
     padding-right: 0;
     text-align: center;
     width: 100%;
-  }
-
-  .parameters-list {
-    float: none;
-    width: auto;
   }
 
   body .kmt-parameter li {
@@ -791,15 +734,4 @@ code:last-child {
     height: 13px !important;
     width: 49px !important;
   }
-
 }
-
-@media screen and (max-width: 412px) {
-
-  iframe {
-    height: 240px;
-    width: 320px;
-  }
-
-}
-
