--- a/styles-v2.css
+++ b/styles-v2.css
@@ -65,6 +65,11 @@ h2 {
 
 h3 {
   color: #000;
+  font-size: 2.75em;
+  margin-bottom: .5em;
+}
+
+.kmt-homepage h3 {
   font-size: 3em;
   margin-bottom: .7em;
 }
@@ -105,13 +110,20 @@ h4 {
 
 .kmt-homepage .kmt-section,
 h2,
-h3 + p {
+h3 + p,
+h3,
+.extra {
   text-align: center;
 }
 
 h3 + p {
   font-size: 1.2em;
   margin-bottom: 2.8em;
+}
+
+.kmt-integration iframe {
+  height: 435px;
+  width: 580px;
 }
 /* / Global settings */
 
@@ -136,12 +148,13 @@ body {
 .kmt-navigation a:hover,
 .kmt-page-footer .kmt-navigation a,
 .kmt-current-page {
-  background-color: rgba(255,255,255,.1);
+  background-color: rgba(255,255,255,.3);
   border-radius: 2px;
 }
 
 h3:after {
-  background-color: #07d;
+  background-color: #f80;
+  /*background-color: #07d;*/
   bottom: -.2em;
   content: '';
   height: 4px;
@@ -153,7 +166,7 @@ h3:after {
 }
 
 .kmt-homepage h3:after {
-  background-color: #f80;
+  /*background-color: #f80;*/
 }
 
 .kmt-demo h2:after {
@@ -197,11 +210,22 @@ h3:after {
 /*.kmt-page-header,*/
 .kmt-homepage .kmt-page-content .kmt-section:first-child,
 .extra,
-.kmt-parameter table {
+.kmt-parameter th,
+.kmt-parameter td {
   background-color: rgba(200,200,200,.2);
 }
 
-.kmt-homepage .kmt-page-header {
+.kmt-parameter th,
+.kmt-parameter td {
+  border: 1px solid rgba(200,200,200,.3);
+}
+
+.kmt-parameter td[colspan] {
+  background-color: rgba(200,200,200,0);
+}
+
+.kmt-homepage .kmt-page-header,
+.extra:nth-child(even) {
   background-color: transparent;
 }
 
@@ -269,7 +293,7 @@ h3:after {
 }
 
 .kmt-page-header .kmt-current-page {
-  color: #07d;
+  color: #fff;
 }
 /* / Header and main navigation */
 
@@ -283,7 +307,8 @@ h3:after {
 }
 
 .kmt-page-hero:after {
-  background: url(images/komito-hero-background.jpg) repeat center center fixed;
+  /*background: url(images/komito-hero-background.jpg) repeat center center fixed;*/
+  background: url(images/komito-hero-background-1.jpg) repeat center right fixed;
   background-size: cover;
   content: '';
   height: 100%;
@@ -356,8 +381,6 @@ li i {
 
 .kmt-parameter th,
 .kmt-parameter td {
-  border-bottom: 1px solid white;
-  border-right: 1px solid white;
   padding: 1em;
   vertical-align: middle;
 }
@@ -635,6 +658,11 @@ code:last-child {
     font-size: 2em;
   }
 
+  .kmt-integration iframe {
+    height: 315px;
+    width: 420px;
+  }
+
   h2 {
     font-size: 1.2em;
     line-height: 1.3;
@@ -653,7 +681,7 @@ code:last-child {
   }
 
   body .kmt-section {
-    padding: 1.5em 5%;
+    padding: 1em 5%;
   }
 
   body .kmt-page-footer > * {
@@ -733,5 +761,23 @@ code:last-child {
   .fb-share-button.fb_iframe_widget.fb_iframe_widget_fluid > span > iframe {
     height: 13px !important;
     width: 49px !important;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+  .kmt-section {
+    padding: 2em 15%;
+  }
+}
+
+@media screen and (max-width: 414px) {
+
+  body .kmt-section {
+    padding: .5em 2.5%;
+  }
+
+  .kmt-integration iframe {
+    height: 240px;
+    width: 320px;
   }
 }
