--- a/styles-v2.css
+++ b/styles-v2.css
@@ -175,16 +175,20 @@ h3:after {
 
 .info {
   background-color: #ffc;
+  color: #000;
+  border-radius: 2px;
+  box-shadow: 0 0 12px rgba(100,100,100,.5);
   margin: 1.5em 7%;
   padding: 1em;
   position: relative;
+  text-align: center;
 }
 
 .info:before {
   bottom: 100%;
   border: 1em solid transparent;
   border-bottom-color: #ffc;
-  content: ' ';
+  /*content: ' ';*/
   height: 0;
   left: 97%;
   margin-left: -1em;
@@ -225,7 +229,7 @@ h3:after {
 }
 
 .kmt-homepage .kmt-page-header,
-.extra:nth-child(even) {
+.extra ~ .extra:nth-child(even) {
   background-color: transparent;
 }
 
